--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/logotrans2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color"  content="#abe6e5"/>
+    <meta name="theme-color"  content="#8bdedd"/>
     <meta
       name="description"
       content="Desarrollo de Software"
