--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/logotrans2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color"  content="#19d8db"/>
+    <meta name="theme-color"  content="#fff"/>
     <meta name="description" content="ADASOFT - Desarrollo de Software y Diseño de Páginas Web. Ofrecemos soluciones personalizadas y consultoría tecnológica para transformar tu negocio con innovación y calidad."/>
   <!-- Meta etiquetas Open Graph -->
   <meta property="og:title" content="ADASOFT" />
