--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color"  content="#fff"/>
     <meta name="description" content="ADASOFT - Desarrollo de Software y Diseño de Páginas Web. Ofrecemos soluciones personalizadas y consultoría tecnológica para transformar tu negocio con innovación y calidad."/>
   <!-- Meta etiquetas Open Graph -->
-  <meta property="og:title" content="ADASOFT" />
+  <!-- <meta property="og:title" content="ADASOFT" />
   <meta property="og:description" content="Desarrollo de Software" />
-  <meta property="og:image" content="%PUBLIC_URL%/images/logotrans2.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/images/logotrans2.png" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
