--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/logotrans2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color"  content="#fff"/>
     <meta name="description" content="ADASOFT - Desarrollo de Software y Diseño de Páginas Web. Ofrecemos soluciones personalizadas y consultoría tecnológica para transformar tu negocio con innovación y calidad."/>
-  <!-- Meta etiquetas Open Graph -->
-  <!-- <meta property="og:title" content="ADASOFT" />
-  <meta property="og:description" content="Desarrollo de Software" />
-  <meta property="og:image" content="%PUBLIC_URL%/images/logotrans2.png" /> -->
+    
+    <!-- Meta tags base para redes sociales -->
+    <meta property="og:site_name" content="ADASOFT" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
- 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
-<link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logotrans2.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logotrans2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>ADASOFT</title>
   </head>
   <body>
