--- a/404.html
+++ b/404.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <script>
-      const segmentCount = 1;
-      const l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
-        l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+    <meta charset="utf-8">
+    <title>ADASOFT - Redirigiendo...</title>
+    <script type="text/javascript">
+        // Función para obtener los parámetros de la URL
+        function getQueryParameters() {
+            var params = {};
+            window.location.search.replace(/[?&]+([^=&]+)=([^&]*)/gi,
+                function(str, key, value) {
+                    params[key] = value;
+                }
+            );
+            return params;
+        }
+
+        // Redirigir a la página principal con la ruta correcta
+        var segmentCount = 0;
+        var location = window.location;
+        var redirect = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port : '');
+        var path = location.pathname;
+        
+        // Si la ruta contiene blog, mantener la ruta completa
+        if (path.includes('/blog/')) {
+            redirect = redirect + path;
+        } else {
+            redirect = redirect + '/#' + path;
+        }
+        
+        window.location.replace(redirect);
     </script>
 </head>
 <body>
-    <h1>Redirecting...</h1>
+    <h1>Redirigiendo...</h1>
+    <p>Si no eres redirigido automáticamente, <a href="/">haz clic aquí</a>.</p>
 </body>
 </html>
