--- a/public/404.html
+++ b/public/404.html
@@ -25,7 +25,7 @@
         if (path.includes('/blog/')) {
             redirect = redirect + path;
         } else {
-            redirect = redirect + '/#' + path;
+            redirect = redirect + path;
         }
         
         window.location.replace(redirect);
