update-inicio-seo

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logotrans2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color"  content="#fff"/>
-    <meta name="description" content="ADASOFT - Desarrollo de Software y Diseño de Páginas Web. Ofrecemos soluciones personalizadas y consultoría tecnológica para transformar tu negocio con innovación y calidad."/>
+    <meta name="description" content="ADASOFT - Desarrollo de Software a medida y Diseño de Páginas Web profesionales. Ofrecemos soluciones tecnológicas personalizadas, sistemas de gestión y consultoría informática para transformar tu negocio con innovación, calidad y eficiencia."/>
+    <meta name="keywords" content="desarrollo software, páginas web, aplicaciones móviles, sistemas de gestión, software a medida, diseño web, desarrollo web, consultoría tecnológica, soluciones informáticas, transformación digital, programación, aplicaciones, desarrollo de sistemas"/>
+    <meta name="author" content="ADASOFT" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="canonical" content="https://adasoft.com.ar/" />
     
     <!-- Meta tags base para redes sociales -->
     <meta property="og:site_name" content="ADASOFT" />
+    <meta property="og:title" content="ADASOFT - Desarrollo de Software y Diseño Web Profesional" />
+    <meta property="og:description" content="Soluciones tecnológicas personalizadas y consultoría informática para transformar tu negocio. Expertos en desarrollo de software y diseño web." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://adasoft.com.ar/" />
+    <meta property="og:image" content="https://adasoft.com.ar/images/logotrans2.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ADASOFT - Desarrollo de Software y Diseño Web Profesional" />
+    <meta name="twitter:description" content="Soluciones tecnológicas personalizadas y consultoría informática para transformar tu negocio. Expertos en desarrollo de software y diseño web." />
+    <meta name="twitter:image" content="https://adasoft.com.ar/images/logotrans2.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +32,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logotrans2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ADASOFT</title>
+    <title>ADASOFT - Desarrollo de Software y Diseño Web Profesional | Soluciones Tecnológicas a Medida</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
