--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="ADASOFT - Desarrollo de Software y Diseño Web" />
+    <meta property="fb:app_id" content="2375482829489229" />
     
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image" />
