--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,24 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     
+    <!-- Critical CSS to prevent layout shifts -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/critical.css" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    <!-- Preload fonts with font-display:swap -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <!-- Fallback for JS disabled browsers -->
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Poppins:wght@400;700&display=swap">
+    </noscript>
+    <!-- Prevent layout shifts with font fallbacks -->
+    <style>
+      /* Font fallback to prevent layout shifts */
+      body {
+        font-family: Poppins, Arial, sans-serif;
+      }
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logotrans2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ADASOFT - Desarrollo de Software y Diseño Web Profesional | Soluciones Tecnológicas a Medida</title>
