--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
           
           // Mapeo de IDs de blog a sus imágenes (se actualizará dinámicamente desde React)
           const blogImages = {
-            'profesionales-oficios-jujuy': 'https://adasoft.com.ar/images/profesionales-oficios-portada.jpg',
+            'profesionales-oficios-jujuy': 'https://adasoft.com.ar/images/oficios.png',
             '1': 'https://adasoft.com.ar/images/web-ia.jpg',
             '2': 'https://adasoft.com.ar/images/blog-2.jpg',
             '3': 'https://adasoft.com.ar/images/blog-3.jpg',
